<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.pickage.com.pickage.UserActivities.LoginUserActivity">

    <ImageView
        style="@style/background_opening_img_view"/>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:background="@drawable/messenger3" />

                <EditText
                    android:id="@+id/email_login"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:layout_marginTop="5dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:onClick="continueBtn"/>

            <TextView android:id="@+id/link_signup"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:text="No account yet? Create one"
                android:gravity="center"
                android:textSize="16dip"
                android:textColor="#008B8B"
                android:layout_gravity="center"
                android:onClick="createAccount"/>

            <TextView android:id="@+id/mes_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20dip"
                android:textAllCaps="true"
                android:text="I'm a messenger"
                android:layout_marginTop="15dp"
                android:layout_alignParentBottom="true"
                android:background="@color/orange"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>