<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="app.pickage.com.pickage.Opening.Opening2"
    style="@style/relativeLayout_style">

    <ImageView
        style="@style/background_opening_img_view"/>

    <ImageView
        android:id="@+id/opening1_img"
        style="@style/img_opening_screen"
        android:src="@drawable/img1"/>

    <TextView
        android:id="@+id/title2_o1s"
        style="@style/title_opening_text_view"
        android:layout_above="@id/opening1_img"
        android:textSize="@dimen/activity_title1_opening"
        android:layout_marginBottom="@dimen/activity_title1_margin_botttom_opening"
        android:text="@string/title1_activity_opening1"/>

    <TextView
        android:id="@+id/title1_o1s"
        style="@style/title_opening_text_view"
        android:layout_above="@id/title2_o1s"
        android:textSize="@dimen/activity_title_opening1"
        android:textStyle="bold"
        android:text="@string/title_activity_opening1"/>

    <TextView
        android:id="@+id/title3_o1s"
        style="@style/title1_opening_text_view"
        android:layout_below="@id/opening1_img"
        android:text="@string/title2_activity_opening1"/>

    <TextView
        android:id="@+id/title4_o1s"
        style="@style/title2_opening_text_view"
        android:layout_below="@id/title3_o1s"
        android:text="@string/title3_activity_opening1"/>
</RelativeLayout>

    <!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--tools:context="app.pickage.com.pickage.Opening.Opening">-->

    <!--<ImageView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:background="@drawable/bkimg"-->
    <!--android:alpha="0.45"/>-->

    <!--<ImageView-->
    <!--android:id="@+id/opening1_img"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_centerInParent="true"-->
    <!--android:src="@drawable/img1" />-->

    <!--<TextView-->
    <!--android:id="@+id/title2_o1s"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_above="@id/opening1_img"-->
    <!--android:textSize="15dp"-->
    <!--android:layout_marginBottom="20dp"-->
    <!--android:textColor="#191970"-->
    <!--android:text="This is the way to send packages today"/>-->

    <!--<TextView-->
    <!--android:id="@+id/title1_o1s"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_above="@id/title2_o1s"-->
    <!--android:textSize="20dp"-->
    <!--android:textStyle="bold"-->
    <!--android:textColor="#191970"-->
    <!--android:text="Effective and easy"/>-->

    <!--<TextView-->
    <!--android:id="@+id/title3_o1s"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_below="@id/opening1_img"-->
    <!--android:layout_marginTop="20dp"-->
    <!--android:textSize="20dp"-->
    <!--android:textStyle="bold"-->
    <!--android:textColor="#FFA500"-->
    <!--android:text="Fill details"/>-->

    <!--<TextView-->
    <!--android:id="@+id/title4_o1s"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:textSize="15dp"-->
    <!--android:textColor="#191970"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:layout_below="@id/title3_o1s"-->
    <!--android:layout_marginTop="20dp"-->
    <!--android:text="Define origin and destination package"/>-->