<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="app.pickage.com.pickage.Opening.Opening"
    style="@style/relativeLayout_style">

        <ImageView
            style="@style/background_opening_img_view"/>

        <TextView
            android:id="@+id/title1_os"
            style="@style/title_text_view"
            android:textStyle="bold"
            android:textSize="@dimen/activity_title1_open"
            android:textColor="@color/orange"
            android:text="@string/title1_activity_opening"/>

        <TextView
            android:id="@+id/title2_os"
            style="@style/title_text_view"
            android:layout_below="@id/title1_os"
            android:textSize="@dimen/activity_title2_open"
            android:textColor="@color/blue"
            android:text="@string/title2_activity_opening"/>

        <TextView
            android:id="@+id/title3_os"
            style="@style/description_app_text_view"
            android:text="@string/text_activity_opening"/>

        <ImageView
            android:id="@+id/logo_img"
            style="@style/img_logo_opening_app"
            android:src="@drawable/logo"/>
</RelativeLayout>

    <!--<ImageView-->
    <!--style="@style/background_opening_img_view"/>-->
    <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
    <!--&lt;!&ndash;android:layout_height="match_parent"&ndash;&gt;-->
    <!--&lt;!&ndash;android:background="@drawable/bkimg"&ndash;&gt;-->
    <!--&lt;!&ndash;android:alpha="0.45"/>&ndash;&gt;-->

    <!--<TextView-->
    <!--android:id="@+id/title1_os"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Seriously,"-->
    <!--android:textStyle="bold"-->
    <!--android:textSize="30dp"-->
    <!--android:textColor="#FFA500"-->
    <!--android:layout_centerInParent="true"-->
    <!--android:textAllCaps="true"/>-->

    <!--<TextView-->
    <!--android:id="@+id/title2_os"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="We are a league above the rest"-->
    <!--android:layout_below="@id/title1_os"-->
    <!--android:textSize="20dp"-->
    <!--android:textColor="#191970"-->
    <!--android:layout_centerInParent="true"-->
    <!--android:textAllCaps="true"/>-->

    <!--<TextView-->
    <!--android:id="@+id/title3_os"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Pick your packages immidetly \nBecause the fast says everything..."-->
    <!--android:textSize="10dp"-->
    <!--android:textColor="#008B8B"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:layout_marginBottom="20dp"-->
    <!--android:layout_marginLeft="16dp"-->
    <!--android:typeface="monospace"/>-->

    <!--<ImageView-->
    <!--android:id="@+id/logo_img"-->
    <!--android:layout_width="100dp"-->
    <!--android:layout_height="70dp"-->
    <!--android:src="@drawable/logo"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:layout_alignParentRight="true"-->
    <!--android:layout_marginBottom="7dp"-->
    <!--android:layout_marginRight="16dp" />-->